fixed card sizing and text alignment

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,8 +1,13 @@
 
 
-/* body {
-    background-color: aquamarine;
-} */
+body {
+    /* background-color: aquamarine; */
+    width: 100%;
+    height: 100vh;
+}
+main {
+    /* background-color: #808080; */
+}
 
 h1 {
     margin: 0 auto;
@@ -13,9 +18,9 @@ h1 {
     align-items: flex-start;
 } */
 
-#events-container {
+/* #events-container {
     width: 30vw;
-}
+} */
 
 #modal-header {
     border: none;
@@ -47,6 +52,9 @@ header {
   background-color: #333;
   color: #fff;
   border: none;
+}
+.button.is-primary {
+    background-color: #333;
 }
 
 /* Hero section styles */
@@ -100,18 +108,14 @@ width: 260px;
 }
 
 
-/* .arrow {
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 3px;
-  }
+#error-modal {
+    display: none;
 
-  .down {
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-  } */
+}
 
+#details-container h2, #details-container p, #details-container ul, h3 {
+    text-align: center;
+}
 
 
   section h1 {
